# aethercli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RTFM-en.md  RTFM-pt.md  RTFM.md  adduser.sh  build_debug.sh  build_thread_check.sh
conf/: commands.json  lang_en.json  lang_pt.json  setup.macro
etc/: config.json  config.template.json  lang_en.json  lang_pt.json  users.json
etc/scripts/: configure-terminal-add-command.sh  configure-terminal-add-user.sh  configure-terminal-list-commands.sh  configure-terminal-list-users.sh  configure-terminal-passwd-user.sh  configure-terminal-rm-command.sh  configure-terminal-rm-user.sh  configure-terminal-set-authentication.sh  configure-terminal-set-language.sh  configure-terminal-set-statusbar.sh  show-commands.sh  show-config.sh  show-ip-interface.sh  show-ip-route.sh  show-version.sh  utils.sh
src/: AIIntegration.hpp  Auth.hpp  CliUtils.hpp  CommandExecutor.hpp  CommandParser.hpp  Common.hpp  Completer.hpp  LocalizationManager.hpp  Logger.hpp  MacroEngine.hpp  SystemStats.hpp  main.cpp
tests/: test_auth.cpp  test_cliutils.cpp  test_completer.cpp  test_interactive.exp  test_macro.cpp  test_parser.cpp
